yaml_parser/tests/fail/trailing-content-that-looks-like-a-mapping.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 17
  |
2 | key2: "quoted2" no key: nor value
  |                 ^
expected `...`
